# mqtt_demo

./: README.md  cert.pem  docker-compose.yaml  key.pem  pyproject.toml
src/mqtt_demo/: __init__.py
tests/: test_mqtt.py  test_nrf_cloud.py
